<resources>
    <string name="app_name">Course App</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="home">Home</string>
    <string name="my_learning">My learning</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_course">My Course</string>
    <string name="start_course">Start Course</string>
    <string name="logout">Logout</string>
    <string name="refer_code">Refer Code</string>
    <string name="refer_code_optional">Refer Code (Optional)</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="session">Session</string>
    <string name="dialog_error_title">Error</string>
    <string name="dialog_ok">OK</string>
    <string name="confirm_password">Confirm Password</string>

</resources>