<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.EditProfileActivity"
    android:padding="@dimen/_20sdp"
    >

    <ImageButton
        android:id="@+id/ibBack"
        android:layout_width="@dimen/_28sdp"
        android:layout_height="@dimen/_28sdp"
        android:background="@drawable/ic_arrow_back"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/_20sdp"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Edit Account"
            android:fontFamily="@font/opensans_semibold"
            android:textSize="@dimen/_22sdp"
            android:textColor="@color/black"
            android:gravity="center"
            />


        <RelativeLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_110sdp"
            android:gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_centerHorizontal="true"
                android:id="@+id/ivProfile"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_gravity="center"
                android:background="@drawable/ic_profile"
                android:backgroundTint="@color/primary_color" />

            <TextView
                android:padding="@dimen/_10sdp"
                android:layout_alignParentBottom="true"
                android:id="@+id/tvAddPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add Photo"
                android:gravity="center"
                android:textColor="@color/primary_color"
                android:fontFamily="@font/opensans"
                android:drawableTint="@color/primary_color"
                android:textSize="@dimen/_14sdp"
                android:drawablePadding="@dimen/_4sdp"
                />



        </RelativeLayout>






        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:boxStrokeColor="@color/primary_color"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="20"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            app:boxStrokeColor="@color/primary_color"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="10"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:boxStrokeColor="@color/primary_color"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:boxStrokeColor="@color/primary_color"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>





        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/_30sdp"
            android:backgroundTint="@color/primary_color"
            android:paddingVertical="@dimen/_10sdp"
            android:fontFamily="@font/opensans"
            android:textColor="@color/white"
            />






    </LinearLayout>



</RelativeLayout>